[package]
edition = "2021"
name = "walker"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.7.0", default-features = false, features = ["napi4", "serde-json", "compat-mode"] }
napi-derive = "2.7.0"
matchit = "0.6"
snmalloc-rs = { version = "*", features = ["build_cc"] }
bytes = "1.2.1"
serde_json = "1.0.85"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
actix-http = { version = "3.2", features = ["http2"]}
actix-service = "2.0.2"
futures = "0.3.24"
http = "0.2.8"
actix-rt = "2.7.0"
actix-server = "2.1.1"
async-hatch = { git = "https://github.com/irrustible/async-oneshot.git", branch = "async-hatch" }
extreme = "666.666.666666"
tera = "1.17.1"
parking_lot = "0.12.1"
simdutf8 = "0.1.4"
halfbrown = "0.1.15"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1" ] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
