[package]
edition = "2021"
name = "walker"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/JackThomson2/napi-rs.git", default-features = false, features = ["napi4", "serde-json", "compat-mode"] }
napi-derive = "2.7.0"
matchit = "0.6"
snmalloc-rs = { version = "*", features = ["build_cc"] }
bytes = "1.2.1"
serde_json = "1.0.85"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
actix-http = { version = "3.2", features = ["http2"]}
actix-service = "2.0.2"
futures = "0.3.24"
http = "0.2.8"
actix-rt = "2.7.0"
actix-server = "2.1.1"
extreme = "666.666.666666"
tera = "1.17.1"
parking_lot = "0.12.1"
simdutf8 = "0.1.4"
halfbrown = "0.1.15"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1" ] }
core_affinity = "0.5.10"
affinity = "0.1.2"
num_cpus = "1.13.1"
thread-priority = "0.9.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
