[package]
edition = "2021"
name = "walker"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/JackThomson2/napi-rs.git", default-features = false, features = ["napi4", "serde-json", "compat-mode"] }
napi-derive = "2.7.0"
matchit = "0.6"
bytes = "1.2.1"
serde_json = "1.0.85"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.24"
http = "0.2.8"
tera = "1.17.1"
parking_lot = "0.12.1"
simdutf8 = "0.1.4"
halfbrown = "0.1.15"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1" ] }
num_cpus = "1.13.1"
extreme = "666.666.666666"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
kanal = "0.1.0-pre7"
ntex = { version = "0.5.29", features = ["tokio", "rustls"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
affinity = "0.1.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
